# ESP-Reveiver

./: BUILD_AND_TEST_SUMMARY.md  CMakeLists.txt  CURRIED_EVENTS_REFACTOR.md  DECOUPLED_ARCHITECTURE_SUMMARY.md  DEPENDENCY_INSTALLER_README.md  EVENTBUS_IMPLEMENTATION_SUMMARY.md  EVENTBUS_QUICK_REFERENCE.md  EVENT_FLOW_DIAGRAM.md  MQTT_INTEGRATION_SUMMARY.md  MQTT_SUBSCRIPTION_GUIDE.md  README.md  RECOVERY_SAFE_MODE_IMPLEMENTATION.md  SETUP_COMPLETE.md  TINY_DIFFS_APPLIED.md  TODO.md  flash.sh  flash_auto.sh  flash_clean.sh  flash_interactive.sh  formal_control.19.toe  install_dependencies.py  install_dependencies.sh  installation_summary.json  monitor.sh  monitor_clean.sh  monitor_interactive.sh  package.json  partitions.csv  requirements.txt  screenlog.0  sdkconfig.defaults  server_mdns_fix.js  setup_env.sh  verify_implementation.sh
eventbus/: CMakeLists.txt  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_SEPARATION_SUMMARY.md  README.md  SEPARATION_OF_CONCERNS_SUMMARY.md  build_test.sh  main.cpp
eventbus/examples/idf_wifi_mdns_demo/: main.cpp
eventbus/include/eventbus/: EventBus.h  EventProtocol.h  FlowGraph.h  TinyEventBus.h
eventbus/main/: CMakeLists.txt  README.md  config.cpp  config.h  data_structures.h  device_monitor.cpp  device_monitor.h  main.cpp  message_processor.cpp  message_processor.h  mqtt_client.cpp  mqtt_client.h  system_state.cpp  system_state.h
eventbus/test/: CMakeLists.txt  test_eventbus.cpp
functional_implementation/: CMakeLists.txt  DECLARATIVE_EVENTS_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md
functional_implementation/main/: config.cpp  declarative_events.cpp  declarative_events.h  declarative_example.cpp  device_commands.cpp  device_commands.h  device_monitor.cpp  device_monitor.h  main.cpp  message_processor.h  pin_controller.h
functional_implementation/test/: CMakeLists.txt  test_curried_events.cpp  test_declarative_events.cpp  test_main_loop_events.cpp
main/: CMakeLists.txt  app_mqtt_client.cpp  app_mqtt_client.h  config.cpp  config.h  custom_mqtt_client.h  data_structures.h  device_commands.h  device_monitor.cpp  device_monitor.h  event_bus_global.cpp  event_bus_interface.h  event_protocol.h  idf_component.yml  logging_handler.h  main.c  main.cpp  main_backup.cpp  mdns_pure.h  mdns_service.cpp  mdns_service.h  message_processor.cpp  message_processor.h  mqtt_client.cpp  mqtt_client_local.h  mqtt_pure.h  pin_controller.cpp  simple_event_bus.cpp  simple_event_bus.h  system_state.cpp  system_state.h  test_real_eventbus.cpp  tiny_event_bus.cpp  tiny_event_bus.h  wifi_manager.cpp  wifi_manager.h  wifi_pure.h
main/eventbus/: EventBus.h  EventProtocol.h  FlowGraph.h  TinyEventBus.h
test/: CMakeLists.txt  README.md  build_and_run.sh  build_and_run_tests.sh  build_eventbus_test.sh  build_mqtt_test.sh  build_simple_test.sh  event_cleanup_example.cpp  manual_cleanup_examples.cpp  run_tests.sh  test_core_logic  test_core_logic.cpp  test_device_id  test_device_id.cpp  test_device_id_standalone.cpp  test_drop_oldest_events.cpp  test_drop_oldest_example.cpp  test_event_cleanup.cpp  test_event_flows.cpp  test_event_flows_simple.cpp  test_eventbus_flow.cpp  test_eventbus_implementation.cpp  test_eventbus_simple.cpp  test_flow_data_passing  test_flow_data_passing.cpp  test_functional_utils.cpp  test_lightweight_reactive.cpp  test_lightweight_standalone  test_lightweight_standalone.cpp  test_message_processor.cpp  test_mqtt_debug.sh  test_mqtt_integration.cpp  test_mqtt_simple.sh  test_mqtt_subscription.sh  test_rxcpp_standalone.cpp  test_srp_architecture.cpp  test_tiny_eventbus_esp32.cpp  test_tiny_eventbus_memory_corruption.cpp
test_simple/: CMakeLists.txt
test_simple/main/: CMakeLists.txt
test_simple/main/eventbus/: EventBus.h  TinyEventBus.h
