idf_component_register(SRCS "main.cpp" "config.cpp" "wifi_manager.cpp" "app_mqtt_client.cpp" "mdns_service.cpp" "message_processor.cpp" "device_commands.cpp" "device_monitor.cpp" "pin_controller.cpp" "test_real_eventbus.cpp" "mqtt_client.cpp" "system_state.cpp"
                    INCLUDE_DIRS "."
                    REQUIRES mqtt esp_wifi esp_event esp_netif nvs_flash driver mdns json esp_timer efuse)